# infinitefusion-high-performance

./: meson.build  meson.options  readme.md
Data/Scripts/001_Technical/: 001_MKXP_Compatibility.rb
Data/Scripts/004_Game classes/: 007_Game_Character.rb
Data/Scripts/007_Objects and windows/: 007_SpriteWrapper.rb
Data/Scripts/009_Scenes/: 001_Transitions.rb
Data/Scripts/011_Battle/: Battle.rb
Data/Scripts/011_Battle/Animations/: 001_Screen_Flash.rb  003_BG_Slide.rb  Start_Text.rb
Data/Scripts/011_Battle/Animations/002_Transitions/: 001_Transitions.rb  002_Square_Transitions.rb  003_Two_Ball_Pass.rb  004_Rising_Splash.rb
Data/Scripts/012_Overworld/002_Battle triggering/: 002_Overworld_BattleIntroAnim.rb
Data/Scripts/014_Pokemon/001_Pokemon-related/: 003_Pokemon_Sprites.rb
Data/Scripts/015_Trainers and player/: 003_Trainer_Sprites.rb
Data/Scripts/016_UI/: 013_UI_Load.rb
Data/Scripts/051_AddOns/: Animated_Sprite.rb  IntroScreen.rb
Scripts/: Battle.rb
Scripts/Battle/: Animations.rb  Battle_Info.rb
Scripts/Battle/Animations/: BG_Slide.rb  Screen_Flash.rb  Start_Text.rb  Transitions.rb
Scripts/Battle/Animations/Transitions/: Square_Transitions.rb
Tests/: Analyise_Frametimes.R  Create_Timestamp.rb  ITest_Suite.rb  Init_Sprite_Test.rb  Pallet_Town_Benchmark.rb  Test_Injector.rb  Test_Suite.rb
